5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1601_1803.log
== TEST (2019-03-27 19:21:03) 
-- CODE:
a = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = m*2 + c*3 + d*4 + u*5
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    u = num // 1 % 10
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:23:13) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)/11
print(soma)

-- OUTPUT:
0.36363636363636365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:24:27) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)//11
print(soma)

-- OUTPUT:
0.36363636363636365
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:24:42) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)//11
print(soma)

-- EXECUTION TIME:
0.210524
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
0
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
3
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:25:30) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)%11
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:26:23) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)%11
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:27:04) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)%11
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:27:54) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)
total = soma%11
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:30:14) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 + c*3 + d*4 + u*5)
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:31:39) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10
#multiplica da direita para esquerda e soma
soma = (m*2 )
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:07:15) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10

soma = m*2
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:07:55) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10

soma = u*2
print(soma)

-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 23:09:15) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10

soma = (u*2 + d*3 + c*4 + m*5) % 11
print(soma)

-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 23:09:29) 
-- CODE:
num = int(input("quatro digito:"))
u = num // 1 % 10
d = num // 10 % 10
c = num // 100 % 10
m = num // 1000 % 10

soma = (u*2 + d*3 + c*4 + m*5) % 11
print(soma)

-- EXECUTION TIME:
0.154494
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
